Add Projects Page & Update CV

--- a/pages/research/research.html
+++ b/pages/research/research.html
@@ -5,15 +5,15 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../../components/SharedStyle.css">
 
-    <link rel="stylesheet" href="publications.css">
+    <link rel="stylesheet" href="research.css">
 
-    <script src="publications.js"></script>
+    <script src="research.js"></script>
 </head>
 <body>
     <iframe src="../../components/NavigationBar/NavigationBar.html" style="border:none; width:100%" title="Navigation Bar"></iframe>
 
-    <p id = "Header-Text">Publications</p>
-    <br>
-
+    <p id = "Header-Text">Research</p>
+    <br>   
+    <!--research.js script inserts page elements here-->
 </body>
 </html>
