--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Matthew Davis Research Website</title>
+    <title>Matthew Davis' Website</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../../components/SharedStyle.css">
 
@@ -14,6 +14,6 @@
 
     <p id = "Header-Text">Projects</p>
     <br>   
-
+    <!--projects.js script inserts page elements here-->
 </body>
 </html>
