--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Matthew Davis Research Website</title>
+	<title>Matthew Davis' Website</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="components/SharedStyle.css">
 
