--- a/index.html
+++ b/index.html
@@ -17,12 +17,25 @@
 		<div id='Picture-Resume'>
 			<div id='Picture'></div>
 			<div id='Resume'>
-				<a href="resources/cv.pdf" download="Matthew-Davis_CV.pdf">Resume/CV Download</a>
+				<a href="resources/cv.pdf" download="Matthew_Davis_CV.pdf">Resume/CV Download</a>
 			</div>
 		</div>
 		<div id='Bio'>
-			<p>Hello, My name is Matthew Davis. I am a first year Ph.D. Student at Georgia Tech working under the advisorship of <a href="https://vsarkar.cc.gatech.edu/">Dr. Vivek Sarkar</a> as a part of the <a href="https://habanero.cc.gatech.edu/">Habanero Extreme Scale Software Research Laboratory</a>.</p>
-			<p>I am interested in Program Analysis & Repair, High Performance Computing, and Compiler-Based Optimization & Bug Detection. In particular, I have been working on Hybrid Program Analysis to increase the efficiency and correctness of program analysis by combining the strengths of static and dynamic analysis.</p>
+			<p>
+				Hello, my name is Matthew Davis. 
+				I am a third year Ph.D. Student at Georgia Tech working under the advisorship of 
+				<a href="https://vsarkar.cc.gatech.edu/">Dr. Vivek Sarkar</a> in the <a href="https://habanero.cc.gatech.edu/">Habanero Extreme Scale Software Research Laboratory</a> 
+				and <a href="https://vganesh1.github.io/">Dr. Vijay Ganesh</a> in the <a href="https://vganesh1.github.io/group.html">Reasoning and Learning Group</a>.
+			</p>
+			<p>
+				I am interested in:
+				<ul>
+					<li>Program Analysis for Optimization and Correctness</li>
+					<li>LLMs for Software Engineering</li>
+					<li>High-Performance & Scientific Computing</li>
+				</ul>
+				In particular, I have been working on Hybrid Program Analysis to increase the efficiency and correctness of program analysis by combining the strengths of LLM-based, static, and dynamic analyses.
+			</p>
 			<h3>Contact Information</h3>
 			<table>
 				<tr>
