--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -12,7 +12,7 @@
 <body>
     <iframe src="../../components/NavigationBar/NavigationBar.html" style="border:none; width:100%" title="Navigation Bar"></iframe>
 
-    <p id = "Header-Text">Projects</p>
+    <p id = "Header-Text">Hobby Projects</p>
     <br>   
     <!--projects.js script inserts page elements here-->
 </body>
